--- a/ks.html
+++ b/ks.html
@@ -6,6 +6,24 @@
   <title>ks</title>
 
  <style type="text/css">
+
+	.abcdiv{
+		width:1500px;
+		height:830px;
+		background:;
+		position:relative;
+		}
+
+
+	.abcdiv p{
+		position:absolute;
+		bottom:0;
+		font-size:30px;
+		color:green;
+		width:100%;
+		text-align:center;
+		}
+
 	body{background:#83fefa;}
 	div.border{
 		width:1100px;
@@ -175,6 +193,9 @@
 	<h1>system</h1>
   </div>
   </div>
+ 	  <div class="abcdiv">
+      <p>江西科技师范大学软件动漫学院21计算机科学与技术1班;小组成员:毛雨欣、李国庆、欧阳朵朵</p>
+ </div>
  </body>
  
 <script>
