--- a/ks.html
+++ b/ks.html
@@ -172,6 +172,12 @@
  </style></head>
   <script src="ks.js"></script>
  <body>
+	       <div>
+	   <img src="https://rabaesther.github.io/RabaEsther/456.jpg">
+	   <img src="">
+	   <img src="">
+	   <img src="">
+	   </div>
   <div class="border" id="stage">
         <video id="video"></video>
         <audio id="audio"></audio>
